# studyvault-stellar

./: .gitignore  CONTRACT_ID.txt  Cargo.toml  DEPLOYMENT.md  POLICY_CONTRACT_ID.txt  README.md
.github/workflows/: ci.yml
contracts/studyvault/: Cargo.toml
contracts/studyvault/src/: lib.rs  test.rs
contracts/studyvault_policy/: Cargo.toml
contracts/studyvault_policy/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  contractConfig.ts  index.css
frontend/src/services/: contract.test.ts  contract.ts  wallet.ts
scripts/: deploy-and-save.ps1  verify-level3.ps1
