[package]
name = "studyvault"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
studyvault_policy = { path = "../studyvault_policy" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }